--- a/index.html
+++ b/index.html
@@ -168,11 +168,12 @@
           <div class="valk-wrapper">
             <video class="valk-player" poster="/img/thumb/preview.png">
               <source src="/vid/preview.mp4" type="video/mp4">
-              Your browser does not support the player.
+              Your browser does not support ©ValkPlayer
             </video>
+            <div class="valk-player-remover"></div>
             <div class="valk-player-mark"></div>
             <div class="valk-player-logo"></div>
-            <p class="main-text">Apex Skill Preview © Valky / Speedy.Cat</p>
+            <p class="main-text">Apex Skill Preview | powered by ©ValkPlayer</p>
           </div>
         </div>
       </div>
