--- a/skillrotation.html
+++ b/skillrotation.html
@@ -879,11 +879,12 @@
           <div class="valk-wrapper">
             <video class="valk-player" id="valk-player" poster="/img/thumb/apex.png">
               <source src="/vid/apex.mp4" type="video/mp4">
-              Your browser does not support the player.
+              Your browser does not support ©ValkPlayer
             </video>
+            <div class="valk-player-remover"></div>
             <div class="valk-player-mark"></div>
             <div class="valk-player-logo"></div>
-            <p class="main-text">Core & Apex Skill Rotation © Valky / Speedy.Cat</p>
+            <p class="main-text">Core & Apex Skill Rotation | powered by ©ValkPlayer</p>
           </div>
         </div>
       </div>
