--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
             <div class="main-text text-center">
               <p>
-                <a href="https://discord.gg/gD7qnr5">https://discord.gg/gD7qnr5</a>
+                <a href="https://discord.gg/gD7qnr5" target="_blank">https://discord.gg/gD7qnr5</a>
               </p>
             </div>
           </div>
